# gitlab-admin

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  run.sh
docs/superpowers/plans/: 2026-05-19-gitlab-org-browser-foundation.md  2026-05-20-gitlab-org-browser-html-report.md
docs/superpowers/specs/: 2026-05-19-gitlab-org-browser-design.md
gitlab_admin/: client.py
gitlab_admin/browse/: __main__.py  cache.py  fetch.py  model.py  render_html.py  render_json.py  render_text.py
knowledge/: index.md  log.md
knowledge/concepts/gitlab/: integration-model.md
knowledge/concepts/gitlab-admin/: browse-command.md  purpose-and-scope.md  tech-stack.md
tests/: build_fixture.py  conftest.py  test_client.py
tests/browse/: test_cache.py  test_fetch.py  test_main.py  test_model.py  test_render_html.py  test_render_json.py  test_render_text.py
tests/browse/fixtures/: expected_tree.txt
tests/fixtures/: snapshot.sqlite
